# flowdoc

./: .editorconfig  .gitignore  ABOUT.md  CHANGELOG.md  CLAUDE.md  README.md  SCOPE.md  fetch_fixtures.py  fetch_identity10_additions_11_12.py  fetch_identity10_fixtures.py  pyproject.toml  railway.json  repo_snapshot.txt
.claude/: settings.json
.github/: pull_request_template.md
docs/: 0_0_FLOWDOC_V1_PLAN.md  SESSION_SUMMARY.md  architecture-exploration.md  architecture.md  architecture_exploration.md  benchmark-results.md  benchmark-structural-audit.md  comparison-results-summary.md  decisions.md  eval-cheatsheet.md  eval-harness.md  eval20-scorecard.md  flowdoc-eval-cheatsheet.md  flowdoc-eval-harness.md  flowdoc-strategy-draft.md  flowdoc-v1-success-contract.md  known-limitations.md  niggle-inventory.md  operating-model.md  phase-2-plan.md  product-thinking.md  program-board.md  research-typography-guidelines.md  research_typography_guidelines.md  session-summary.md  strategy.md  surface-spec.md  technical-companion.md  viability-notes.md  viability-plan.md  visual-validation-backlog.md
eval/: README.md  run_metrics.py
scripts/: extraction_trial.py  package.json  run-comparison-batch.py
src/: decisions.md
surface/: app.py  config.py  convert.py  fetch.py  rate_limit.py
tests/: test_boilerplate_trim.py  test_cli_basic.py  test_degradation.py  test_duplicate_heading_drop.py  test_empty_heading_drop.py  test_empty_list_drop.py  test_extract_mode.py  test_integration.py  test_no_article_body.py  test_orphan_section_drop.py  test_parser_blocks.py  (+5 more)
(+320 files in other folders)
