[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "decant-cli"
version = "0.1.0"
description = "Convert semantic HTML to dyslexia-friendly readable HTML"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Dave Zack"}
]
dependencies = [
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "nh3>=0.2.0",
    "trafilatura>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "flask>=3.0.0",
    "requests>=2.31.0",
]

[project.scripts]
decant = "decant.cli.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.setuptools.packages.find]
include = ["decant*"]
exclude = ["samples*"]